--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,3 +8,12 @@ encoding//\u57FA\u7840\u7C7B\u578B/while\u548Cfor\u904D\u5386\u5217\u8868.py=utf
 encoding//\u57FA\u7840\u7C7B\u578B/\u5143\u7EC4.py=utf-8
 encoding//\u57FA\u7840\u7C7B\u578B/\u5B57\u7B26\u4E32\u5E38\u7528\u64CD\u4F5C.py=utf-8
 encoding//\u6587\u4EF6/\u6587\u4EF6\u8BFB\u5199.py=utf-8
+encoding//\u9762\u5411\u5BF9\u8C61/\u591A\u6001.py=utf8
+encoding//\u9762\u5411\u5BF9\u8C61/\u5B9A\u4E49\u7C7B.py=utf8
+encoding//\u9762\u5411\u5BF9\u8C61/\u5C5E\u6027\u6743\u9650.py=utf-8
+encoding//\u9762\u5411\u5BF9\u8C61/\u70E4\u5730\u74DC.py=utf8
+encoding//\u9762\u5411\u5BF9\u8C61/\u7C7B\u5C5E\u6027\u4E0E\u65B9\u6CD5.py=utf8
+encoding//\u9762\u5411\u5BF9\u8C61/\u7EE7\u627F.py=utf8
+encoding//\u9762\u5411\u5BF9\u8C61/\u81EA\u5B9A\u4E49\u7C7B\u4F5C\u5C5E\u6027.py=utf8
+encoding/zabbix_api_get_host_infor(corp).py=utf8
+encoding/zabbix_api_get_host_infor(my).py=utf8
