--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,11 +4,13 @@ encoding//\u51FD\u6570/\u53EF\u53D8\u4E0E\u4E0D\u53EF\u53D8\u7C7B\u578B.py=utf-8
 encoding//\u51FD\u6570/\u53EF\u53D8\u957F\u53C2\u6570.py=utf-8
 encoding//\u51FD\u6570/\u7F3A\u7701\u53C2\u6570\u7684\u51FD\u6570.py=utf-8
 encoding//\u57FA\u7840\u7C7B\u578B/for\u5FAA\u73AF\u7684else.py=utf-8
+encoding//\u57FA\u7840\u7C7B\u578B/set.py=utf8
 encoding//\u57FA\u7840\u7C7B\u578B/while\u548Cfor\u904D\u5386\u5217\u8868.py=utf-8
 encoding//\u57FA\u7840\u7C7B\u578B/\u5143\u7EC4.py=utf-8
 encoding//\u57FA\u7840\u7C7B\u578B/\u5B57\u7B26\u4E32\u5E38\u7528\u64CD\u4F5C.py=utf-8
 encoding//\u6587\u4EF6/\u6587\u4EF6\u8BFB\u5199.py=utf-8
 encoding//\u6A21\u5757\u4E0E\u5305(\u6709__init__.py)/__init__.py=utf8
+encoding//\u7ED9\u7A0B\u5E8F\u7A7F\u53C2\u6570/\u7ED9\u7A0B\u5E8F\u4F20\u53C2.py=utf8
 encoding//\u9762\u5411\u5BF9\u8C61/\u591A\u6001.py=utf8
 encoding//\u9762\u5411\u5BF9\u8C61/\u5B9A\u4E49\u7C7B.py=utf8
 encoding//\u9762\u5411\u5BF9\u8C61/\u5C5E\u6027\u6743\u9650.py=utf-8
