finish 打击敌人逻辑

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -19,5 +19,6 @@ encoding//\u9762\u5411\u5BF9\u8C61/\u70E4\u5730\u74DC.py=utf8
 encoding//\u9762\u5411\u5BF9\u8C61/\u7C7B\u5C5E\u6027\u4E0E\u65B9\u6CD5.py=utf8
 encoding//\u9762\u5411\u5BF9\u8C61/\u7EE7\u627F.py=utf8
 encoding//\u9762\u5411\u5BF9\u8C61/\u81EA\u5B9A\u4E49\u7C7B\u4F5C\u5C5E\u6027.py=utf8
+encoding//\u9762\u5411\u5BF9\u8C61_\u6253\u51FB\u654C\u4EBA/frame.py=utf-8
 encoding/zabbix_api_get_host_infor(corp).py=utf8
 encoding/zabbix_api_get_host_infor(my).py=utf8
