--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//zabbix/zabbix_api_get_host_infor(corp).py=utf8
+encoding//zabbix/zabbix_api_get_host_infor(my).py=utf8
 encoding//\u51FD\u6570/\u533F\u540D\u51FD\u6570.py=utf-8
 encoding//\u51FD\u6570/\u53EF\u53D8\u4E0E\u4E0D\u53EF\u53D8\u7C7B\u578B.py=utf-8
 encoding//\u51FD\u6570/\u53EF\u53D8\u957F\u53C2\u6570.py=utf-8
@@ -20,5 +22,4 @@ encoding//\u9762\u5411\u5BF9\u8C61/\u7C7B\u5C5E\u6027\u4E0E\u65B9\u6CD5.py=utf8
 encoding//\u9762\u5411\u5BF9\u8C61/\u7EE7\u627F.py=utf8
 encoding//\u9762\u5411\u5BF9\u8C61/\u81EA\u5B9A\u4E49\u7C7B\u4F5C\u5C5E\u6027.py=utf8
 encoding//\u9762\u5411\u5BF9\u8C61_\u6253\u51FB\u654C\u4EBA/frame.py=utf-8
-encoding/zabbix_api_get_host_infor(corp).py=utf8
-encoding/zabbix_api_get_host_infor(my).py=utf8
+encoding/inputTest.py=utf8
