--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,24 @@
 eclipse.preferences.version=1
+encoding//100\u4F8B\u5B50/11-20/11.py=utf-8
+encoding//100\u4F8B\u5B50/11-20/12.py=utf-8
+encoding//100\u4F8B\u5B50/11-20/13.py=utf-8
+encoding//100\u4F8B\u5B50/11-20/14.py=utf-8
+encoding//100\u4F8B\u5B50/11-20/15.py=utf-8
+encoding//100\u4F8B\u5B50/11-20/16.py=utf-8
+encoding//100\u4F8B\u5B50/11-20/17.py=utf-8
+encoding//100\u4F8B\u5B50/11-20/18.py=utf-8
+encoding//100\u4F8B\u5B50/11-20/19.py=utf-8
+encoding//100\u4F8B\u5B50/11-20/20.py=utf-8
+encoding//100\u4F8B\u5B50/1_10/1.py=utf-8
+encoding//100\u4F8B\u5B50/1_10/10.py=utf-8
+encoding//100\u4F8B\u5B50/1_10/2.py=utf-8
+encoding//100\u4F8B\u5B50/1_10/3.py=utf8
+encoding//100\u4F8B\u5B50/1_10/4.py=utf8
+encoding//100\u4F8B\u5B50/1_10/5.py=utf-8
+encoding//100\u4F8B\u5B50/1_10/6.py=utf-8
+encoding//100\u4F8B\u5B50/1_10/7.py=utf-8
+encoding//100\u4F8B\u5B50/1_10/8.py=utf-8
+encoding//100\u4F8B\u5B50/1_10/9.py=utf-8
 encoding//zabbix/zabbix_api_get_host_infor(corp).py=utf8
 encoding//zabbix/zabbix_api_get_host_infor(my).py=utf8
 encoding//\u51FD\u6570/\u533F\u540D\u51FD\u6570.py=utf-8
