--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -19,6 +19,16 @@ encoding//100\u4F8B\u5B50/1_10/6.py=utf-8
 encoding//100\u4F8B\u5B50/1_10/7.py=utf-8
 encoding//100\u4F8B\u5B50/1_10/8.py=utf-8
 encoding//100\u4F8B\u5B50/1_10/9.py=utf-8
+encoding//100\u4F8B\u5B50/21-30/21.py=utf-8
+encoding//100\u4F8B\u5B50/21-30/22.py=utf8
+encoding//100\u4F8B\u5B50/21-30/23.py=utf8
+encoding//100\u4F8B\u5B50/21-30/24.py=utf8
+encoding//100\u4F8B\u5B50/21-30/25.py=utf8
+encoding//100\u4F8B\u5B50/21-30/26.py=utf8
+encoding//100\u4F8B\u5B50/21-30/27.py=utf8
+encoding//100\u4F8B\u5B50/21-30/28.py=utf8
+encoding//100\u4F8B\u5B50/21-30/29.py=utf8
+encoding//100\u4F8B\u5B50/21-30/30.py=utf8
 encoding//zabbix/zabbix_api_get_host_infor(corp).py=utf8
 encoding//zabbix/zabbix_api_get_host_infor(my).py=utf8
 encoding//\u51FD\u6570/\u533F\u540D\u51FD\u6570.py=utf-8
