--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -29,6 +29,28 @@ encoding//100\u4F8B\u5B50/21-30/27.py=utf8
 encoding//100\u4F8B\u5B50/21-30/28.py=utf8
 encoding//100\u4F8B\u5B50/21-30/29.py=utf8
 encoding//100\u4F8B\u5B50/21-30/30.py=utf8
+encoding//100\u4F8B\u5B50/31-40/31.py=utf-8
+encoding//100\u4F8B\u5B50/31-40/32.py=utf-8
+encoding//100\u4F8B\u5B50/31-40/33.py=utf-8
+encoding//100\u4F8B\u5B50/31-40/34.py=utf-8
+encoding//100\u4F8B\u5B50/31-40/35.py=utf-8
+encoding//100\u4F8B\u5B50/31-40/36.py=utf-8
+encoding//100\u4F8B\u5B50/31-40/37(\u6392\u5E8F).py=utf-8
+encoding//100\u4F8B\u5B50/31-40/38.py=utf-8
+encoding//100\u4F8B\u5B50/31-40/39.py=utf-8
+encoding//100\u4F8B\u5B50/31-40/40.py=utf-8
+encoding//100\u4F8B\u5B50/41-50/41.py=utf-8
+encoding//100\u4F8B\u5B50/41-50/42.py=utf-8
+encoding//100\u4F8B\u5B50/41-50/45.py=utf-8
+encoding//100\u4F8B\u5B50/41-50/46(\u7B97\u5E73\u65B9).py=utf-8
+encoding//100\u4F8B\u5B50/41-50/47(\u6362\u53D8\u91CF\u503C).py=utf-8
+encoding//100\u4F8B\u5B50/41-50/49(lambda).py=utf-8
+encoding//100\u4F8B\u5B50/41-50/50(\u8F93\u51FA\u4E00\u4E2A\u968F\u673A\u6570).py=utf-8
+encoding//python\u5B66\u4E60\u624B\u518C/CodingFile.py=utf-8
+encoding//python\u5B66\u4E60\u624B\u518C/chapter10_whileDemo.py=utf-8
+encoding//zabbix/Portal_call.py=utf8
+encoding//zabbix/Portal_call_demo.py=utf8
+encoding//zabbix/alertGet.py=utf8
 encoding//zabbix/zabbix_api_get_host_infor(corp).py=utf8
 encoding//zabbix/zabbix_api_get_host_infor(my).py=utf8
 encoding//\u51FD\u6570/\u533F\u540D\u51FD\u6570.py=utf-8
