--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -46,6 +46,8 @@ encoding//100\u4F8B\u5B50/41-50/46(\u7B97\u5E73\u65B9).py=utf-8
 encoding//100\u4F8B\u5B50/41-50/47(\u6362\u53D8\u91CF\u503C).py=utf-8
 encoding//100\u4F8B\u5B50/41-50/49(lambda).py=utf-8
 encoding//100\u4F8B\u5B50/41-50/50(\u8F93\u51FA\u4E00\u4E2A\u968F\u673A\u6570).py=utf-8
+encoding//RabbitMQ/emit_log.py=utf8
+encoding//RabbitMQ/receive_logs.py=utf8
 encoding//python\u5B66\u4E60\u624B\u518C/CodingFile.py=utf-8
 encoding//python\u5B66\u4E60\u624B\u518C/chapter10_whileDemo.py=utf-8
 encoding//zabbix/Portal_call.py=utf8
